@@ -57,10 +57,14 @@ Install the following packages with your package manager:
 On a debian or ubuntu system you would just type the following in a root console:
     apt-get install python-gtkglext1 python-pyode python-opengl python-gtk2
 
-BEWARE: Debian Lenny sadly contains a broken "python-opengl" package. You need to
-switch to "squeeze" and run "apt-get install python-opengl" to fix this. Afterwards
-you should go back to "Lenny". This may also be relevant for certain versions of
-Ubuntu.
+BEWARE: Debian "Lenny" and Ubuntu "Dapper/Hardy/Intrepid/Jaunty" contain older
+"python-opengl" and "python-pyode" packages, that expose problems with PyCAM.
+You need to add "Squeeze" (for Debian) or "Karmic/Lucid" (for Ubuntu) to your
+package repository list and run the following:
+    apt-get update
+    apt-get install python-pyode python-opengl
+Afterwards you can remove the new package repository again.
+
 
 
 Dependencies of the Tk interface: 
